--- a/index.html
+++ b/index.html
@@ -108,5 +108,16 @@
     </div>
   </div>
 </div>
+<!--Блок навичок-->
+<div class="container">
+  <div class="resume__block">
+    <div class="skills">
+      <h3 class="skills__header">Skills</h3>
+      <p class="skills__text">
+        Problem solving, Continuous Learning, Team Collaboration
+      </p>
+    </div>
+  </div>
+</div>
   </body>
 </html>
