--- a/index.html
+++ b/index.html
@@ -119,5 +119,15 @@
     </div>
   </div>
 </div>
+<!--Шаблон блоку досвіду-->
+<div class="container">
+  <div class="resume__block">
+    <div class="main-info fh">
+      <div class="experiences"></div>
+
+      <div class="additional-info fv"></div>
+    </div>
+  </div>
+</div>
   </body>
 </html>
